--- a/conf/janus.transport.http.jcfg.sample
+++ b/conf/janus.transport.http.jcfg.sample
@@ -10,13 +10,13 @@ general: {
 	#events = true					# Whether to notify event handlers about transport events (default=true)
 	json = "indented"				# Whether the JSON messages should be indented (default),
 									# plain (no indentation) or compact (no indentation and no spaces)
-	base_path = "/janus"			# Base path to bind to in the web server (plain HTTP only)
+	base_path = "/janus_secure"			# Base path to bind to in the web server (plain HTTP only)
 	http = true						# Whether to enable the plain HTTP interface
 	port = 8088						# Web server HTTP port
 	#interface = "eth0"				# Whether we should bind this server to a specific interface only
 	#ip = "192.168.0.1"				# Whether we should bind this server to a specific IP address (v4 or v6) only
 	https = true					# Whether to enable HTTPS (default=false)
-	secure_port = 8089				# Web server HTTPS port, if enabled
+	secure_port = 443				# Web server HTTPS port, if enabled
 	#secure_interface = "eth0"		# Whether we should bind this server to a specific interface only
 	#secure_ip = "192.168.0.1"		# Whether we should bind this server to a specific IP address (v4 or v6) only
 	#acl = "127.,192.168.0."		# Only allow requests coming from this comma separated list of addresses
